tests/compile_failures/attributes/no_attributes_listed.rs
use dioxus_sugar::attributes;

#[attributes]
struct Props {
    name: String,
    id: String,
}

fn main() {}